changed automl notebook
I included some text that had specific runid - have to remove it to make the project work overall

--- a/automl.ipynb
+++ b/automl.ipynb
@@ -483,14 +483,14 @@
     }
    ],
    "source": [
-    "# I closed the notebook and used this script to allow me \n",
-    "# to continue the work without rerunning all pf the previous code\n",
-    "# <DEV>\n",
-    "run_id = \"AutoML_0d1cb3c5-44c5-4bee-81a5-a3646969425a\"\n",
-    "remote_run = ws.get_run(run_id)\n",
-    "run = remote_run\n",
-    "best_run, fitted_model = remote_run.get_output()\n",
-    "# </DEV>"
+    "# # I closed the notebook and used this script to allow me \n",
+    "# # to continue the work without rerunning all pf the previous code\n",
+    "# # <DEV>\n",
+    "# run_id = \"AutoML_0d1cb3c5-44c5-4bee-81a5-a3646969425a\"\n",
+    "# remote_run = ws.get_run(run_id)\n",
+    "# run = remote_run\n",
+    "# best_run, fitted_model = remote_run.get_output()\n",
+    "# # </DEV>"
    ]
   },
   {
@@ -499,6 +499,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "run = remote_run\n",
     "model_name = best_run.properties[\"model_name\"]\n",
     "model = run.register_model(model_name=model_name, description=\"job-leaver automl\", tags=None)"
    ]
