Updated following Udacity initial review
Printed the fitted model object to show its params

--- a/automl.ipynb
+++ b/automl.ipynb
@@ -397,21 +397,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "gather": {
-     "logged": 1598431425670
-    },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -424,6 +411,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Best run id: AutoML_0d1cb3c5-44c5-4bee-81a5-a3646969425a_38\n",
       "balanced_accuracy 0.6434460026560024\n",
       "matthews_correlation 0.33913409028624436\n",
       "AUC_weighted 0.7866389250101649\n",
@@ -453,6 +441,7 @@
    "source": [
     "best_run, fitted_model = remote_run.get_output()\n",
     "best_run_metrics = best_run.get_metrics()\n",
+    "print(f\"Best run id: {best_run.id}\")\n",
     "for metric_name in best_run_metrics:\n",
     "    metric = best_run_metrics[metric_name]\n",
     "    print(metric_name, metric)"
@@ -471,26 +460,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# I closed the notebook and used this script to allow me \n",
+    "# to continue the work without rerunning all pf the previous code\n",
+    "# <DEV>\n",
+    "from azureml.core.workspace import Workspace\n",
+    "ws = Workspace.from_config()\n",
+    "run_id = \"AutoML_0d1cb3c5-44c5-4bee-81a5-a3646969425a\"\n",
+    "remote_run = ws.get_run(run_id)\n",
+    "run = remote_run\n",
+    "best_run, fitted_model = run.get_output()\n",
+    "# </DEV>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:root:The model you attempted to retrieve requires 'azureml-train-automl-runtime' to be installed at '==1.19.0'. Please install 'azureml-train-automl-runtime==1.19.0' (e.g. `pip install azureml-train-automl-runtime==1.19.0`) and then rerun the previous command.\n"
+      "Pipeline(memory=None,\n",
+      "         steps=[('datatransformer',\n",
+      "                 DataTransformer(enable_dnn=None, enable_feature_sweeping=None,\n",
+      "                                 feature_sweeping_config=None,\n",
+      "                                 feature_sweeping_timeout=None,\n",
+      "                                 featurization_config=None, force_text_dnn=None,\n",
+      "                                 is_cross_validation=None,\n",
+      "                                 is_onnx_compatible=None, logger=None,\n",
+      "                                 observer=None, task=None, working_dir=None)),\n",
+      "                ('prefittedsoftvotingclassifier',...\n",
+      "                                                                                                    min_samples_split=0.10368421052631578,\n",
+      "                                                                                                    min_weight_fraction_leaf=0.0,\n",
+      "                                                                                                    n_estimators=10,\n",
+      "                                                                                                    n_jobs=1,\n",
+      "                                                                                                    oob_score=False,\n",
+      "                                                                                                    random_state=None,\n",
+      "                                                                                                    verbose=0,\n",
+      "                                                                                                    warm_start=False))],\n",
+      "                                                                     verbose=False))],\n",
+      "                                               flatten_transform=None,\n",
+      "                                               weights=[0.14285714285714285,\n",
+      "                                                        0.21428571428571427,\n",
+      "                                                        0.21428571428571427,\n",
+      "                                                        0.14285714285714285,\n",
+      "                                                        0.07142857142857142,\n",
+      "                                                        0.07142857142857142,\n",
+      "                                                        0.14285714285714285]))],\n",
+      "         verbose=False)\n",
+      "Y_transformer(['LabelEncoder', LabelEncoder()])\n"
      ]
     }
    ],
    "source": [
-    "# # I closed the notebook and used this script to allow me \n",
-    "# # to continue the work without rerunning all pf the previous code\n",
-    "# # <DEV>\n",
-    "# run_id = \"AutoML_0d1cb3c5-44c5-4bee-81a5-a3646969425a\"\n",
-    "# remote_run = ws.get_run(run_id)\n",
-    "# run = remote_run\n",
-    "# best_run, fitted_model = remote_run.get_output()\n",
-    "# # </DEV>"
+    "print(fitted_model)"
    ]
   },
   {
@@ -836,7 +864,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.6.9"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
