Revision following Udacity initial review
Published the custom model using SDK

--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -523,10 +523,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# # <DEV>\n",
+    "# # Use this section to return the hyperparameter run in order the recreate the best_run object\n",
+    "# from azureml.core.workspace import Workspace\n",
+    "# ws = Workspace.from_config()\n",
+    "\n",
+    "# run_id = \"HD_ea5bbccd-5dbc-4830-a17a-90a191be53fc\"\n",
+    "# run = ws.get_run(run_id)\n",
+    "\n",
+    "# best_run = run.get_best_run_by_primary_metric()\n",
+    "# # </DEV>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Model(workspace=Workspace.create(name='WS2020120214', subscription_id='ea9f71e6-aef9-4b3a-837d-f651463b4205', resource_group='WS2020120214_rg'), name=job-leavers-logreg, id=job-leavers-logreg:1, version=1, tags={'Training context': 'Hyperdrive'}, properties={})"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Register model\n",
+    "model = best_run.register_model(model_path='outputs/model.pkl', model_name='job-leavers-logreg',\n",
+    "                        tags={'Training context':'Hyperdrive'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Deleting model as it is no longer required. I am deploying the AutoML best model\n",
+    "model.delete()"
+   ]
   },
   {
    "cell_type": "markdown",
